# kitchen-project

./: .dockerignore  .env.example  .env.example.prod  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.web  PRD大纲生成提示词.txt  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  烹饪助手PRD文字版.txt  记录claude提示词.txt  连续烹饪助手产品需求文档（PRD）.docx
.claude/: settings.local.json
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 6b1bc3e9bf3f_drop_total_amount.py  fd769eaac1a8_init_schema.py
apps/api/app/: config.py  deps.py  main.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/routers/: ocr.py  prices.py  purchase_items.py  purchases.py  suppliers.py  uploads.py
apps/api/app/schemas/: ocr.py  price.py  purchase.py  supplier.py
apps/api/app/services/ocr/: adapter.py  exceptions.py  mock.py  openai_compat.py  parser.py  prompt.py
apps/api/app/services/storage/: adapter.py  image.py  local.py
apps/api/tests/: conftest.py  test_config.py  test_deps.py  test_ocr_adapter_factory.py  test_ocr_endpoint.py  test_ocr_exceptions.py  test_ocr_mock.py  test_ocr_openai_compat.py  test_ocr_parser.py  test_ocr_prompt.py  test_ocr_schemas.py  test_price_schemas.py  test_prices_search.py  test_purchase_items.py  test_purchases.py  test_purchases_from_ocr.py  test_storage_image.py  test_storage_local.py  test_suppliers.py  test_uploads.py
apps/api/tests/integration/: test_ocr_real.py
apps/web/: index.html  (+6 more)
nginx/: kitchen.conf
scripts/: backup-db.sh  deploy.sh  gen-api-types.sh  reset-db.sh
(+30 files in other folders)
